# setup-repo

./: .aider.conf.yml  CONVENTIONS.md  Cargo.toml  README.md  lefthook.yml
.github/workflows/: ci.yml
src/: main.rs  types.rs
src/types/: cli.rs  command.rs  outcome.rs
src/types/command/: copy_from_repo_command.rs  print_command.rs
