[package]
name = "setup-repo"
version = "0.1.0"
edition = "2021"
description = "A personal repo setup script"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/setup-repo"
repository = "https://github.com/DenisGorbachev/setup-repo"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
fmt-derive = "0.1.2"
git2 = { version = "0.18", features = ["https"] }
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
tempfile = "3.10.1"
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = { version = "2.5.4" }

[package.metadata.cargo-machete]
ignored = ["derive_more", "derive-getters", "derive-new", "fmt-derive", "stub-macro", "standard-traits", "subtype"]
